manifests/unifi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-network-application
  namespace: unifi-network-application
  labels:
    app: unifi-network-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-network-application
  template:
    metadata:
      labels:
        app: unifi-network-application
    spec:
      containers:
        - name: unifi-network-application
          image: lscr.io/linuxserver/unifi-network-application:latest
          lifecycle:
            postStart:
              exec:
                command: ["bash", "-c", "sed -i 's/~MONGO_USER~/\"$MONGO_USER\"/g' /defaults/system.properties"]
          ports:
            - containerPort: 8443
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 8080
