manifests/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-network-application
  namespace: unifi-network-application
spec:
  selector:
    app: unifi-network-application
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 8443
    - name: stun
      port: 3478
      protocol: UDP
      targetPort: 3478
    - name: ap-discovery
      port: 10001
      protocol: UDP
      targetPort: 10001
    - name: device-comm
      port: 8080
      targetPort: 8080
