manifests/unifi/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-network-application
  namespace: unifi-network-application
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.maplehillhomestead.com`)
      kind: Rule
      middlewares:
        - name: unifi-network-application-https-redirect
          namespace: unifi-network-application
      services:
        - name: unifi-network-application
          port: 443
          serversTransport: unifi-network-application-transport
  tls:
    domains:
      - main: unifi.maplehillhomestead.com
    secretName: unifi-network-application-cert-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-network-application-device
  namespace: unifi-network-application
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`device.unifi.maplehillhomestead.com`)
      kind: Rule
      middlewares:
        - name: unifi-network-application-https-redirect
          namespace: unifi-network-application
      services:
        - name: unifi-network-application
          port: 8080
          serversTransport: unifi-network-application-transport
  tls:
    domains:
      - main: unifi.maplehillhomestead.com
    secretName: unifi-network-application-cert-secret
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: unifi-network-application-https-redirect
  namespace: unifi-network-application
spec:
  redirectScheme:
    scheme: https
    permanent: true
